--- a/templates/module/image_band.twig
+++ b/templates/module/image_band.twig
@@ -1,13 +1,13 @@
-<div class="module image-band image-band-{{module.image_band|length}}">
+<div class="module image-band">
 
     <div class="row no-gutters">
 
         {% for image in module.image_band %}
-        
-        <div class="col-md">
-            <img src="{{TimberImage(image.image).src|resize(1000,500)}}" class="image-{{loop.index}} mw-100">
+        <div class="col-md image-band-image-{{loop.index}}">
+            <img src="{{TimberImage(image.image).src|resize(3000,1500)}}">
         </div>
         {% endfor %}
+
      </div>
 
 </div>
