--- a/templates/single.twig
+++ b/templates/single.twig
@@ -3,28 +3,43 @@
 {% block content %}
 	
 <div class="container">
-	<div class="row">
 
+	{% if post.categories %}
+	<div class="row">
 		<div class="col">
-			{% if post.categories %}
 			<ul class="post-breadcrumbs">
 				{% for category in post.categories %}
 				<li><a href="{{category.link}}">{{category.name}}</a></li>
 				{% endfor %}
 			</ul>
-			{% endif %}
-
-			<article class="post">
-				<h2 class="post-title">{{post.name}}</h2>
-				<p class="post-date">{{post.date}}</p>
-				<div class="post-content">
-				{{post.content}}
-				</div>
-			</article>
-		<a class="special special-left" href="/news">Back to All News</a>
 		</div>
-
 	</div>
+	{% endif %}
+
+	<div class="row">
+		<div class="col">
+			<h2 class="post-title">{{post.name}}</h2>
+			<p class="post-date">{{post.date}}</p>
+		</div>
+	</div>
+
+	{% if post.thumbnail %}
+	<div class="row">
+		<div class="col-md-8 col-lg-5">
+			<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
+		</div>
+	</div>
+	{% endif %}
+
+	<div class="row">
+		<div class="col">
+			<article class="post">
+				<div class="post-content">{{post.content}}</div>
+			</article>
+			<a class="special special-left" href="/news">Back to All News</a>
+		</div>
+	</div>
+
 </div>
 	
 {% endblock %}
