--- a/templates/module/text-landing.twig
+++ b/templates/module/text-landing.twig
@@ -3,12 +3,8 @@
         <div class="row">
             <div class="col">
                 <h2>{{module.heading}}</h2>
-                    <div class="w-50">
-                    {{module.copy}}
-                    </div>
-                    <div class="text-two-col">
-                    {{module.additional_copy}}
-                    </div>
+                    <div class="text-copy">{{module.copy}}</div>
+                    <div class="text-additional-copy">{{module.additional_copy}}</div>
             </div>
         </div>
     </div>
