--- a/templates/module/text.twig
+++ b/templates/module/text.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             {% if module.heading %}
-            <h2 class="h4">{{module.heading}}</h2>
+            <h2>{{module.heading}}</h2>
             {% endif %}
             
             {% if module.copy %}
