--- a/templates/custom-sidebar.twig
+++ b/templates/custom-sidebar.twig
@@ -4,16 +4,18 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-7 sidebar-content">
+            <div class="col-lg-8 sidebar-content">
                 {% for module in post.get_field('modules') %}
                     {% include 'partial/module.twig' %}
                 {% endfor %}
             </div>
 
-            <div class="col-md-4 offset-md-1 sidebar-sidebar">
-                {% for module in post.get_field('sidebar_modules') %}
-                    {% include 'partial/module.twig' %}
-                {% endfor %}
+            <div class="col-lg-3 offset-lg-1 sidebar-sidebar">
+                <div class="row">
+                    {% for module in post.get_field('sidebar_modules') %}
+                        {% include 'partial/module.twig' %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
