--- a/templates/module/post-sidebar.twig
+++ b/templates/module/post-sidebar.twig
@@ -1,4 +1,4 @@
-<div class="module post">
+<div class="{{loop.index == 1 ? 'col-md-12' : 'col-md-6'}} col-lg-12 module post">
     <div class="card">
         <img class="card-img-top" src="{{module.post_object.thumbnail.src}}" alt="{{module.post_object.thumbnail.alt}}">
             <div class="card-body">
