--- a/templates/module/cta-sidebar.twig
+++ b/templates/module/cta-sidebar.twig
@@ -1,4 +1,4 @@
-<div class="{{loop.index == 1 ? 'col-md-12' : 'col-md-6'}} col-lg-12 module cta-sidebar">
+<div class="col-md-12 module cta-sidebar">
     <div class="card">
         <div class="card-body">
             {% if module.heading %}
