Embed and image styles

--- a/templates/module/image.twig
+++ b/templates/module/image.twig
@@ -1,7 +1,9 @@
 <div class="module image">
     {% set image = TimberImage(module.image) %}
     <figure class="figure">
-        <img src="{{image.src|resize('800')}}" class="figure-image img-fluid" alt="{{image.alt}}">
-        <figcaption class="figure-caption text-right">{{image.caption}}</figcaption>
+        <img src="{{image.src|resize('800')}}" class="figure-image" alt="{{image.alt}}">
+        {% if image.caption %}
+        <figcaption class="figure-caption">{{image.caption}}</figcaption>
+        {% endif %}
     </figure>
 </div>
