--- a/style.css
+++ b/style.css
@@ -636,6 +636,27 @@ h2.post-title {
 }
 
 /*
+* — Image —
+*/
+
+.image .figure {
+    margin-bottom: 0;
+}
+
+.image .figure-image {
+    height: auto;
+    max-width: 100%;
+}
+
+.image .figure-caption {
+    color: #959399;
+    font-size: 1rem;
+    line-height: 1.2;
+    margin-top: 15px;
+    text-align: right;
+}
+
+/*
 * — Text —
 */
 
