--- a/templates/module/embed.twig
+++ b/templates/module/embed.twig
@@ -1,6 +1,6 @@
 <div class="module embed">
     {% if module.heading %}
-    {{module.heading}}
+    <h2>{{module.heading}}</h2>
     {% endif %}
 
     {{module.embed}}
