--- a/templates/module/post_feed.twig
+++ b/templates/module/post_feed.twig
@@ -1,11 +1,8 @@
 {% set post_type = module.post_type|lower %}
-
 {% set category = TimberTerm(module.category) %}
-
 {% set args = {
     'numberposts' : module.max,
 } %}
-
 {% if post_type == 'event' %}
     {% set args = args|merge({
         'meta_key' : '_EventStartDate',
@@ -33,27 +30,49 @@
     <div class="row">
     
         {% for item in category.get_posts(args) %}
-
-            {% set event_start_date = item._EventStartDate|date("F d") %}
-            {% set event_start_time = item._EventStartDate|date("g:i a") %}
-            {% set event_end_time = item._EventEndDate|date("g:i a") %}
-
-            {% set event_date = event_start_date~', '~event_start_time~'&ndash;'~event_end_time %}
-
             <div class="col-lg post-feed-post">
+
+            {% set news %}
+                <div class="row">
+                    <div class="col-md-6 col-lg-12">
+                        <img class="post-feed-post-thumbnail" src="{{item.thumbnail.src|resize(800,500)}}">
+                    </div>
+                    <div class="col-md-6 col-lg-12">
+                        <div class="post-feed-post-meta">
+                            <ul class="post-categories">
+						    {% for category in item.categories %}
+						        <li><a href="{{category.link}}">{{category.name}}</a></li>
+						    {% endfor %}
+                            </ul>
+                        </div>
+                        <h3 class="post-feed-post-title"><a href="{{item.link}}">{{item.name}}</a></h3>
+                        <p class="post-feed-post-preview">{{item.preview.length(20).read_more('')}}</a></p>
+                        <a class="special special-right" href="{{item.link}}">Read More</a>
+                    </div>
+                </div>
+            {% endset %}
+
+            {% set event %}
+                {% set event_start_date = item._EventStartDate|date("F d") %}
+                {% set event_start_time = item._EventStartDate|date("g:i a") %}
+                {% set event_end_time = item._EventEndDate|date("g:i a") %}
+                {% set event_date = event_start_date~', '~event_start_time~'&ndash;'~event_end_time %}
                 <div class="card">
                     <div class="card-body">
-                        <span class="post-feed-post-date">{{post_type == 'event' ? event_date}}</span>
+                        <span class="post-feed-post-meta">{{event_date}}</span>
                         <h3 class="post-feed-post-title"><a href="{{item.link}}">{{item.name}}</a></h3>
                         <p class="post-feed-post-preview">{{item.preview.length(20).read_more('')}}</a></p>
                     </div>
                 </div>
-            </div>
+            {% endset %}
 
+            {{post_type == 'event' ? event : news}}
+
+            </div>
         {% endfor %}
     
     </div>
 
-    </div>
+</div>
             
 </div>
