--- a/templates/sidebar-news.twig
+++ b/templates/sidebar-news.twig
@@ -1,11 +1,9 @@
-<div class="card module">
-    <div class="card-header">
-        <h6 class="mb-0">Categories</h6>
-    </div>
+<div class="module news-categories">
+    <h3>News Categories</h3>
 
-    <ul class="list-group list-group-flush">
+    <ul>
         {% for category in categories %}
-        <li class="list-group-item"><a href="{{category.link}}">{{category.name}}</a></li>
+        <li><a href="{{category.link}}">{{category.name}}</a></li>
         {% endfor %}
     </ul>
 </div>
