--- a/templates/single.twig
+++ b/templates/single.twig
@@ -4,41 +4,53 @@
 	
 <div class="container">
 
-	{% if post.categories %}
 	<div class="row">
-		<div class="col">
-			<ul class="post-breadcrumbs">
-				{% for category in post.categories %}
-				<li><a href="{{category.link}}">{{category.name}}</a></li>
-				{% endfor %}
-			</ul>
-		</div>
-	</div>
-	{% endif %}
 
-	<div class="row">
-		<div class="col">
-			<h2 class="post-title">{{post.name}}</h2>
-			<p class="post-date">{{post.date}}</p>
-		</div>
-	</div>
+		<div class="col-lg-7">
 
-	{% if post.thumbnail %}
-	<div class="row">
-		<div class="col-md-8 col-lg-5">
-			<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
-		</div>
-	</div>
-	{% endif %}
+			{% if post.categories %}
+			<div class="row">
+				<div class="col">
+					<ul class="post-breadcrumbs">
+						{% for category in post.categories %}
+						<li><a href="{{category.link}}">{{category.name}}</a></li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+			{% endif %}
 
-	<div class="row">
-		<div class="col">
-			<article class="post">
-				<div class="post-content">{{post.content}}</div>
-			</article>
-			<a class="special special-left" href="/news">Back to All News</a>
-		</div>
-	</div>
+			<div class="row">
+				<div class="col">
+					<h2 class="post-title">{{post.name}}</h2>
+					<p class="post-date">{{post.date}}</p>
+				</div>
+			</div>
+
+			{% if post.thumbnail %}
+			<div class="row">
+				<div class="col-md-8 col-lg-5">
+					<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
+				</div>
+			</div>
+			{% endif %}
+
+			<div class="row">
+				<div class="col">
+					<article class="post">
+						<div class="post-content">{{post.content}}</div>
+					</article>
+					<a class="special special-left" href="/news">Back to All News</a>
+				</div>
+			</div>
+
+		</div> <!-- /.col-lg-7 -->
+
+		<div class="col-md-6 col-lg-3 offset-lg-1">
+			{{sidebar}}
+		</div> <!-- /.col-lg-3 -->
+
+	</div> <!-- /.row -->
 
 </div>
 	
