--- a/style.css
+++ b/style.css
@@ -386,46 +386,134 @@ input, button, select, optgroup, textarea {
 * === SIDEBARS ===
 */
 
-/*
-* — News —
-*/
+.sidebar-module { margin-bottom: 60px; }
 
-.news-categories h3 {
-    border-bottom: 1px solid #FCB813;
-    font-size: 1.125rem;
-    font-weight: bold;
-    line-height: 1.2;
-    margin-bottom: 10px;
-    padding-bottom: 4px;
+.sidebar-module:last-child { margin-bottom: 0; }
+
+@media (min-width: 768px) {
+    .sidebar-module:nth-last-child(2) { margin-bottom: 0; }
 }
 
-.news-categories ul {
+@media (min-width: 992px) {
+    .sidebar-module:nth-last-child(2) { margin-bottom: 60px; }
+}
+
+.sidebar-module h3, .sidebar-module h4 {
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 0;
+}
+
+.sidebar-module h3 {
+    border-bottom: 1px solid #FCB813;
+    font-size: 1.3125rem;
+    padding-bottom: 5px;
+}
+
+.sidebar-module h4 { font-size: 1.125rem; }
+
+.sidebar-module h3 a, .sidebar-module h4 a { color: inherit; }
+
+.sidebar-module ul {
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
 }
 
-.news-categories li {
+.sidebar-module li {
     font-weight: bold;
     line-height: 1.25;
     margin-bottom: 20px;
 }
 
-.news-categories li:last-child {
-    margin-bottom: 0;
-}
+.sidebar-module li:last-child { margin-bottom: 0; }
 
-.news-categories li a {
-    color: inherit;
-}
+.sidebar-module li a { color: inherit; }
 
-.news-categories li a:before {
+.sidebar-module li a:before {
     color: #FCB813;
     content: '\25b6';
     font-size: 0.5rem;
     font-weight: normal;
     margin-right: 5px;
     vertical-align: middle;
+}
+
+.sidebar-copy { margin-bottom: 0 !important; }
+
+.sidebar-link {
+    display: block;
+    margin-top: 10px;
+}
+
+.sidebar-thumb {
+    margin-bottom: 15px;
+    max-width: 100%;
+}
+
+@media (min-width: 768px) {
+    .sidebar-cta .sidebar-thumb {
+        margin-bottom: 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .sidebar-cta .sidebar-thumb {
+        margin-bottom: 15px;
+    }
+}
+
+/*
+* — Sidebar Categories —
+*/
+
+.sidebar-categories h3 { margin-bottom: 15px; }
+
+/*
+* — Sidebar CTA —
+*/
+
+.sidebar-cta h3 { margin-bottom: 10px; }
+
+/*
+* — Sidebar Post —
+*/
+
+.sidebar-post h3, .sidebar-post h4 { margin-bottom: 10px; }
+
+/*
+* — Sidebar Post Feed - Blog Posts —
+*/
+
+.sidebar-post-feed-posts h3, .sidebar-post-feed-posts h4 { margin-bottom: 10px; }
+
+.sidebar-post-feed-post { margin-bottom: 10px; }
+
+.sidebar-post-feed-post:last-child { margin-bottom: 0; }
+
+/*
+* — Sidebar Post Feed - Events —
+*/
+
+.sidebar-post-feed-events h3 { margin-bottom: 15px; }
+
+.sidebar-post-feed-event {
+    border-bottom: 1px solid #D5D4D6;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+}
+
+.sidebar-post-feed-event:last-child {
+    border-bottom: none;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.sidebar-post-feed-event-date {
+    color: #959399;
+    display: block;
+    line-height: 1.2;
+    margin-bottom: 8px;
 }
 
 /*
