--- a/templates/module/post-sidebar.twig
+++ b/templates/module/post-sidebar.twig
@@ -1,14 +1,1 @@
-<div class="col-md-6 col-lg-12 module post-sidebar">
-    <div class="card">
-        <img class="card-img-top" src="{{module.post_object.thumbnail.src}}" alt="{{module.post_object.thumbnail.alt}}">
-            <div class="card-body">
-                {% if module.heading %}
-                <h6 class="card-title">{{module.heading}}</h6>
-                {% endif %}
-
-                <p class="card-text">{{ module.post_object.preview.read_more('') }}</p>
-
-                <a class="btn btn-secondary" href="{{module.post_object.link}}">Learn More About {{module.post_object.name}}</a>
-            </div>
-    </div>
-</div>
+old sidebar post object
