--- a/templates/custom-sidebar.twig
+++ b/templates/custom-sidebar.twig
@@ -10,7 +10,7 @@
                 {% endfor %}
             </div>
 
-            <div class="col-lg-3 offset-lg-1">
+            <div class="col-lg-3 offset-lg-1 sidebar-sidebar">
                 {{sidebar}}
             </div>
         </div>
