--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,7 +5,7 @@
 <div class="container">
 	<div class="row">
 
-		<div class="col-lg-8">
+		<div class="col-lg-8 sidebar-content">
 
 			<div class="row">
 
@@ -37,7 +37,7 @@
 			
 		</div> <!-- /.col-lg-8 -->
 
-		<div class="col-md-6 col-lg-3 offset-lg-1">
+		<div class="col-md-6 col-lg-3 offset-lg-1 sidebar-sidebar">
 			{{sidebar}}
 		</div> <!-- /.col-lg-3 -->
 
