--- a/templates/single.twig
+++ b/templates/single.twig
@@ -6,7 +6,7 @@
 
 	<div class="row">
 
-		<div class="col-lg-7">
+		<div class="col-lg-7 sidebar-content">
 
 			{% if post.categories %}
 			<div class="row">
@@ -46,7 +46,7 @@
 
 		</div> <!-- /.col-lg-7 -->
 
-		<div class="col-md-6 col-lg-3 offset-lg-1">
+		<div class="col-md-6 col-lg-3 offset-lg-1 sidebar-sidebar">
 			{{sidebar}}
 		</div> <!-- /.col-lg-3 -->
 
