--- a/templates/module/image_gallery.twig
+++ b/templates/module/image_gallery.twig
@@ -1,12 +1,19 @@
-<div class="module gallery">
-    <div class="row">
+<div class="module image-gallery">
+
+    <div id="carousel-{{loop.index}}" class="carousel slide" data-ride="carousel">
+
         {% for image in module.gallery %}
-        {% set image = TimberImage(image) %}
+        
+            {% set image = TimberImage(image) %}
 
-        <div class="col-md-4">
-            <a href="{{image.src}}"><img class="mw-100" src="{{image.src|resize(800)}}" alt="{{image.alt}}" title="{{image.title}}"></a>
-        </div>
+            <div class="carousel-inner">
+                <div class="carousel-item {{loop.index == 1 ? 'active'}}">
+                    <img src="{{image.src|letterbox(900, 600, '#fff')}}" alt="{{image.alt}}" />
+                </div>
+            </div>
 
-        {% endfor %}      
+        {% endfor %}
+      
     </div>
+
 </div>
