--- a/templates/module/cta-home.twig
+++ b/templates/module/cta-home.twig
@@ -1,6 +1,6 @@
 <div class="module cta-home">
     
-    <img src="{{TimberImage(module.image).src|resize(1440,960,'left')}}">
+    <img class="mw-100" src="{{TimberImage(module.image).src|resize(1440,960,'left')}}">
 
     <div class="container-fluid">
         <div class="row">
