--- a/templates/module/hero.twig
+++ b/templates/module/hero.twig
@@ -1,7 +1,7 @@
 <div class="module hero">
 
     {% set image = TimberImage(module.image) %}
-    <img alt="{{image.alt}}" class="hero-image" src="{{image.src|resize(1544, 724, 'center')}}">
+    <img alt="{{image.alt}}" class="mw-100" src="{{image.src|resize(1544, 724, 'center')}}">
 
     <div class="container">
         <div class="row">
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <p>{{module.copy}}</p>
                 {% if module.buttons %}
-                <ul>
+                <ul class="buttons">
                     {% for button in module.buttons %}
                     <li><a class="btn btn-primary" href="{{button.link.url}}" target="{{button.link.target}}">{{button.link.title}}</a></li>
                     {% endfor %}
