--- a/templates/module/image_gallery.twig
+++ b/templates/module/image_gallery.twig
@@ -1,19 +1,44 @@
 <div class="module image-gallery">
+    {% set carousel = 'carousel-'~loop.index %}
+    <div id="{{carousel}}" class="carousel slide">
 
-    <div id="carousel-{{loop.index}}" class="carousel slide" data-ride="carousel">
-
+      <div class="carousel-inner">
+      
         {% for image in module.gallery %}
         
-            {% set image = TimberImage(image) %}
+          {% set image = TimberImage(image) %}
+        
+          <div class="carousel-item {{loop.index == 1 ? 'active'}}">
+            <img class="d-block w-100" src="{{image.src|letterbox(900, 600, '#fff')}}" alt="{{image.alt}}" />
 
-            <div class="carousel-inner">
-                <div class="carousel-item {{loop.index == 1 ? 'active'}}">
-                    <img src="{{image.src|letterbox(900, 600, '#fff')}}" alt="{{image.alt}}" />
-                </div>
+            {% if image.caption %}
+            <div class="carousel-caption d-none d-md-block">
+              <p>{{image.caption}}</p>
             </div>
+            {% endif %}
 
+          </div>
+          
         {% endfor %}
       
-    </div>
+      </div> <!-- /.carousel-inner -->
 
+      <a class="carousel-control-prev" href="#{{carousel}}" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+      <a class="carousel-control-next" href="#{{carousel}}" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+    </div> <!-- /#{{carousel}} -->
+
+    <ol class="list-unstyled list-inline">
+        {% for image in module.gallery %}
+          {% set image = TimberImage(image) %}
+          <li class="list-inline-item" data-target="#{{carousel}}" data-slide-to="{{loop.index0}}" class="{{loop.index == 1 ? 'active'}}"><img class="mw-100" src="{{image.src|letterbox(150, 100, '#fff')}}" alt="{{image.alt}}"></li>
+        {% endfor %}
+      </ol>
 </div>
