--- a/templates/module/cta_pair.twig
+++ b/templates/module/cta_pair.twig
@@ -14,7 +14,7 @@
             {% for cta in module.cta_pair %}
             <div class="col-md-12 col-lg-6 cta">
                 {% if cta.image %}
-                <img src="{{TimberImage(cta.image).src|resize(1000,555)}}" class="card-image-top cta-image">
+                <img src="{{TimberImage(cta.image).src|resize(1000,555)}}" class="card-image-top cta-image mw-100">
                 {% endif %}
 
                 <div class="row no-gutters cta-content">
