--- a/templates/module/post_feed.twig
+++ b/templates/module/post_feed.twig
@@ -36,12 +36,12 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-12">
                         {% if item.thumbnail %}
-                        <img class="post-feed-post-thumbnail" src="{{item.thumbnail.src|resize(800,500)}}">
+                        <img class="post-feed-post-thumbnail mw-100" src="{{item.thumbnail.src|resize(800,500)}}">
                         {% endif %}
                     </div>
                     <div class="col-md-6 col-lg-12">
                         <div class="post-feed-post-meta">
-                            <ul class="post-categories">
+                            <ul class="categories">
 						    {% for category in item.categories %}
 						        <li><a href="{{category.link}}">{{category.name}}</a></li>
 						    {% endfor %}
