--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -53,12 +53,12 @@
     </div>
     <div class="col-10 offset-1 col-md-4 offset-md-0">
         <div class="footer-primary-content footer-primary-menu">
-            {% include 'menu.twig' with {'menu': footer_primary.get_items, 'ul_class': 'footer-links'} %}
+            {% include 'menu.twig' with {'menu': footer_primary.get_items,} %}
         </div>
     </div>
     <div class="col-10 offset-1 col-md-4 offset-md-0">
         <div class="footer-primary-content footer-secondary-menu">
-            {% include 'menu.twig' with {'menu': footer_secondary.get_items, 'ul_class': 'footer-links'} %}
+            {% include 'menu.twig' with {'menu': footer_secondary.get_items,} %}
         </div>
     </div>
 </div>
