--- a/templates/menu.twig
+++ b/templates/menu.twig
@@ -1,10 +1,12 @@
 {% if menu %}
-	<ul class="{{ul_class}}">
+	<ul>
+	{% if search %}
+		<li class="search"><i class="fas fa-search"></i></li>
+	{% endif %}
 	{% for item in menu %}
-		<li class="{{li_class}} {{ item.classes | join(' ') }}">
+		<li class="{{ item.classes | join(' ') }}">
 			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
 			{% include "menu.twig" with {'menu': item.get_children} %}
-		</li>
 	{% endfor %}
 	</ul>
 {% endif %}
