--- a/templates/base.twig
+++ b/templates/base.twig
@@ -19,35 +19,44 @@
 	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 			<div class="container">
+
 				<header class="header" role="banner">
 					{% block header %}
 					<div class="row">
-						<div class="col-md-6">
-							<h1 role="banner" class="h2">
-								<a href="{{site.url}}" rel="home">{{site.name}}</a>
+						<div class="col-md-3">
+							<h1 role="banner">
+								<a href="{{site.url}}" rel="home" title="{{site.name}}">
+									{% if options.header_logo %}
+										{% set logo = TimberImage(options.header_logo) %}
+										<img src="{{logo.src}}" alt="{{logo.alt}}">
+									{% else %}
+										{{site.name}}
+									{% endif %}
+								</a>
 							</h1>
 						</div>
-						<div class="col-md-6 text-right">
-							<nav role="navigation" class="header-secondary">
-								{% include 'menu.twig' with {'menu': header_secondary.get_items, 'ul_class': 'list-inline', 'li_class': 'list-inline-item'} %}
+						<div class="col-md-9">
+							<nav role="navigation" class="header-menu header-menu-secondary">
+								{% include 'menu.twig' with {'menu': header_secondary.get_items, 'search': true} %}
 							</nav>
-							<nav role="navigation" class="header-primary">
-								{% include 'menu.twig' with {'menu': header_primary.get_items, 'ul_class': 'list-inline', 'li_class': 'list-inline-item'} %}
+							<nav role="navigation" class="header-menu header-menu-primary">
+								{% include 'menu.twig' with {'menu': header_primary.get_items} %}
 							</nav>
 						</div>
 					{% endblock %}
 				</header>
+
 			</div>
 
 			
 				
 				<main class="main" role="main">
 					{% if menu_items %}
-					<div class="menu-items">
+					<div class="sub-menu">
 						<div class="container">
-							<ul class="list-inline">
+							<ul>
 								{% for item in menu_items %}
-								<li class="list-inline-item {{item.id == current ? 'current'}}"><a href="{{item.link}}">{{item.name}}</a></li>
+								<li class="{{item.id == current ? 'current-sub-menu-item'}}"><a href="{{item.link}}">{{item.name}}</a></li>
 								{% endfor %}
 							</ul>
 						</div>
