--- a/templates/index.twig
+++ b/templates/index.twig
@@ -16,7 +16,7 @@
 					{% endif %}
 					
 					{% if post.categories %}
-					<ul class="post-categories">
+					<ul class="categories">
 						{% for category in post.categories %}
 						<li><a href="{{category.link}}">{{category.name}}</a></li>
 						{% endfor %}
