--- a/templates/footer-secondary.twig
+++ b/templates/footer-secondary.twig
@@ -1,11 +1,13 @@
 <div class="row footer-secondary">
-    <div class="col-10 offset-1 col-md-5 offset-md-0 footer-newsletter">
+
+    <div class="col-10 offset-1 col-md-5 offset-md-0 col-lg footer-newsletter">
         <h4>Sign Up for Our Newsletter</h4>
         {% filter shortcodes %}
         [gravityform id={{newsletter}} title=false description=false]
         {% endfilter %}
     </div>
-    <div class="col-10 offset-1 col-md-5 offset-md-2 footer-logo">
+
+    <div class="col-10 offset-1 col-md-5 offset-md-2 col-lg-3 footer-logo">
         {% if options.header_logo or options.footer_logo %}
         
             {% if options.footer_logo %}
@@ -18,4 +20,7 @@
 
         {% endif %}
     </div>
+
+
+
 </div>
