--- a/templates/base.twig
+++ b/templates/base.twig
@@ -18,6 +18,15 @@
 	
 	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+	{% if options.announcement %}
+	<div class="alert alert-dismissible fade show" role="alert">
+		<p><span>Announcement:</span> {{options.announcement}}</p>
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		</button>
+	</div>
+	{% endif %}
+
 			<div class="container">
 
 				<header class="header" role="banner">
